0.11.18
Fixed Cd-Text loading in audio projects.
FIxed data project character restrictions.

0.11.17
Fixed some DVD writing speed detection issues.
Always write pure Data CDs in TAO mode when using cdrecord since DAO fails on so many
	writers. There should not be any drawback.
Properly restrict the charset everywhere a file in a data project can be renamed.
	
0.11.16
Open the device read-only in case opening read/write failes.

0.11.15
Fixed writer detection issues with kernel >= 2.6.8 (this only means that K3b now openes the device
	read/write when issuing the MODE SELECT command. Nothing more. Tests with kernel 2.6.9-rc2
	on my system still produced problems)
Fixed Sox encoder plugin.
Fixed editing range for audio track length.

0.11.14
QT 3.1 compile fix (I keep forgetting these...)
Fixed ID3V2 Tag size calculation. This fixes mp3 file detection for some files.

0.11.13
Backported the new Mp3 file detection.
Fixed cddb local file naming for disc ids with less than 8 digits.
Properly disable all buttons in the copy dialogs if no writer is installed and only-create-image
	is selected.
Fixed VideoDVD on-the-fly writing problem.
Select appropriate raw writing mode if raw96r is not supported.
Properly save the device search path. Now hotplug devices should be detected properly.
BACKPORT: DVD+R Double Layer writing.
Properly close a DVD when the user did not want multisession.
Properly find dvd+rw-format version >= 4.10.
Improved the raw toc data hex/bcd check. This should fix problems with drives providing
	totally bogus raw data.

0.11.12
Another qt 3.1 compile fix
Mkisofs 2.02 obsoletes the use of -L, -H, and -P. Replaced them by the long versions.
Fixed GET PERFORMANCE command which caused crashes on some systems and DMA problems on other.
Default to RAW writing mode for Audio CDs which contain zero length pregaps since there are
    so many buggy CD writers out there failing to create proper CDs in that case.